<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Purplebird</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="new_tweet">New Tweet</string>
    <string name="send">Send</string>
    <string name="say_something">Say Something</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

</resources>