<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TimelineActivity">


    <item
        android:id="@+id/itSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/itCompose"
        android:icon="@drawable/ic_comment_black_24dp"
        android:title="@string/new_tweet"
        app:showAsAction="always"
        android:onClick="onComposeView"/>


    <item
        android:id="@+id/itProfile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"
        app:showAsAction="always"
        android:onClick="onProfileView"/>

</menu>